--- a/srcs/ftps.yaml
+++ b/srcs/ftps.yaml
@@ -10,8 +10,12 @@ spec:
     app: ftps
   ports:
   - port: 21
+    targetPort: 21
+    nodePort: 21
     name: ftps
   - port: 21000
+    targetPort: 21000
+    nodePort: 21000
     name: ftps-data
 
 ---
