--- a/srcs/mysql.yaml
+++ b/srcs/mysql.yaml
@@ -5,12 +5,15 @@ metadata:
   labels:
     app: mysql
 spec:
+  type: NodePort
   ports:
   - port: 3306
+    targetPort: 3306
+    nodePort: 3306
+    name: mysql
   selector:
     app: mysql
     tier: mysql
-  clusterIP: None
 
 ---
 
