Most of things working, big cleanup remaining and FTPs to check

--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -7,11 +7,16 @@ RUN echo ${IP}
 RUN apk update
 RUN apk add openrc --no-cache
 
+RUN apk add telegraf --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ --allow-untrusted --no-cache
+
 RUN apk add pure-ftpd --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ --allow-untrusted --no-cache
 
 RUN { echo "password"; echo "password"; } | adduser user
 
 RUN echo ${IP} > ip.txt
+
+RUN mkdir -p /etc/telegraf
+COPY ./telegraf.conf /etc/telegraf/telegraf.conf
 
 COPY ./start.sh /start.sh
 CMD sh /start.sh
