--- a/srcs/phpmyadmin/Dockerfile
+++ b/srcs/phpmyadmin/Dockerfile
@@ -5,6 +5,8 @@ ARG IP
 RUN apk update && apk upgrade && apk add bash \
 && apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli php7-zlib php7-curl php7-mbstring php7-json php7-session
 
+RUN apk add telegraf --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ --allow-untrusted --no-cache
+
 RUN wget https://files.phpmyadmin.net/phpMyAdmin/4.9.0.1/phpMyAdmin-4.9.0.1-all-languages.tar.gz \
 && tar -xvf phpMyAdmin-4.9.0.1-all-languages.tar.gz \
 && mv phpMyAdmin-4.9.0.1-all-languages /www \
@@ -16,6 +18,9 @@ COPY phpmyadmin.inc.php /www/config.inc.php
 COPY start.sh .
 
 RUN chmod +x start.sh
+
+RUN mkdir -p /etc/telegraf
+COPY ./telegraf.conf /etc/telegraf/telegraf.conf
 
 EXPOSE 5000
 
