Persistency, homepage animation

--- a/srcs/influxdb.yaml
+++ b/srcs/influxdb.yaml
@@ -14,6 +14,19 @@ spec:
   selector:
     app: influxdb
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: influxdb
+  labels:
+    app: influxdb
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -36,3 +49,10 @@ spec:
         ports:
         - containerPort: 8086
         imagePullPolicy: Never
+        volumeMounts:
+        - name: influxdb
+          mountPath: /var/lib/influxdb
+      volumes:
+      - name: influxdb
+        persistentVolumeClaim:
+          claimName: influxdb
