--- a/srcs/mysql.yaml
+++ b/srcs/mysql.yaml
@@ -16,21 +16,7 @@ spec:
     app: mysql
 
 ---
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mysql
-  labels:
-    type: local
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 2Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/mnt/data"
----
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -38,12 +24,12 @@ metadata:
   labels:
     app: mysql
 spec:
-  storageClassName: manual
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -67,3 +53,10 @@ spec:
         ports:
         - containerPort: 3306
           name: mysql
+        volumeMounts:
+        - name: mysql
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql
+        persistentVolumeClaim:
+          claimName: mysql
